--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,37 +8,45 @@ body {
     width: 100%;
     z-index: 5;
     background:#00021dd6;
-    padding: 1rem;
+    padding: 1rem 0;
 }
 form {
-    margin: 1rem;
+    margin: 3rem;
 }
 label {
     color: #fff;
     font-family: impact;
-    font-size: 2rem;
-    letter-spacing: .1rem;
+    font-size: 2.5rem;
+    letter-spacing: .2rem;
     text-shadow: 0 0 0.1rem black;
 }
 #btnsContainer, #gifContainer, form {
     text-align: center;
 }
 #gifContainer {
-    margin-top: 11rem;
+    margin-top: 23rem;
 }
 #gifContainer div {
     display: inline-block;
 }
 p {
     text-align: center;
-    margin: 1rem .1rem 0 .2rem;
-    border: 2px dotted #fff;
+    margin: 0 .1rem 1rem .2rem;
+    border: 2px dotted #646575;
     font-family: monospace;
     font-size: 1.25rem;
-    color: #fff;
+	color: #fff;
+	padding: .2rem;
 }
 img {
     border: 1px solid #fff;
+}
+#artistInput {
+	margin: 2rem;
+	font-size: 1.5rem;
+    font-family: monospace;
+    padding: .5rem;
+    width: 25%;
 }
 .artist {
 	-moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
@@ -53,8 +61,8 @@ img {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:monospace;
-	font-size:15px;
-	padding:6px 15px;
+    font-size: 1.5rem;
+    padding: .5rem 1.5rem;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #b23e35;
 }
@@ -85,7 +93,7 @@ img {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:monospace;
-	font-size:13px;
+	font-size:1.5rem;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
@@ -104,8 +112,26 @@ img {
 	position:relative;
 	top:1px;
 }
+@media (max-width: 1100px) {
+	#gifContainer {
+		margin-top: 25rem;
+	}
+}
 @media (max-width: 750px ) {
 	#gifContainer {
-		margin-top: 13rem;
+		margin-top: 28rem;
+	}
+	#artistInput {
+		width: 65%;
+	}
+	.gifImages {
+		width: 95%;
+	}
+	.artist {
+		font-size: 1.25rem;
+		padding: .25rem .62rem;
+	}
+	form {
+		margin: 1.5rem;
 	}
 }
